test(audit): small refactor
Signed-off-by: Sleither Reyes <sleither.reyes@gmx.de>